--- a/index.html
+++ b/index.html
@@ -2,109 +2,218 @@
 <html>
 <head>
   <meta charset='utf-8'>
-
-  <title>edmundask/codeigniter-twiggy @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #3c0e28;
-      font-family: Helvetica, Arial, FreeSans, sans-serif;
-      color: #ffffff;
-    }
-    #container {
-      margin: 0 auto;
-      width: 960px;
-    }
-    p
-    {
-      line-height: 1.5em;
-    }
-    h1 { font-size: 3.8em; color: white; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.7em; color: #8cedcd; }
-    h3 { font-size: 1.3em; color: #8a5874; }
-    a { color: #8cedcd; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 10px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 100%; border-bottom: 1px solid #613b50; }
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+  <title>Twiggy - Twig template engine implementation for CodeIgnigter</title>
+  <link href='http://fonts.googleapis.com/css?family=Comfortaa:400,700,300' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="./assets/stylesheets/main.css">
 </head>
 
 <body>
-  <a href="https://github.com/edmundask/codeigniter-twiggy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="https://github.com/edmundask/codeigniter-twiggy">
+    <img style="position: fixed; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
+  </a>
 
-  <div id="container">
+  <header>
 
-    <div class="download">
-      <a href="https://github.com/edmundask/codeigniter-twiggy/zipball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/edmundask/codeigniter-twiggy/tarball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
+    <div class="container centered">
 
-    <h1><a href="https://github.com/edmundask/codeigniter-twiggy">Twiggy</a>
-      <span class="small">by <a href="https://github.com/edmundask">edmundask</a></span></h1>
+      <div id="introduction">
 
-    <div class="description">
-      Twig template engine implementation for CodeIgniter
-    </div>
+        <div id="logo">
 
-    <h2>Overview</h2>
+          <a href="http://edmundask.github.com/codeigniter-twiggy"></a>
 
-    <p>Twiggy is not just a simple implementation of Twig template engine for CodeIgniter. 
-      It supports themes, layouts, templates for regular apps and also for apps that use HMVC (module support). 
-      It is supposed to make life easier for developing and maitaining CodeIgniter applications where themes and nicely structured templates are necessary.
-    </p>
+        </div>
 
-    <hr>
+        <a class="donate" href="#donate">Donate</a>
 
-    <h2>Installation &amp; Requirements</h2>
+        <div class="clear"></div>
 
-    <h3>Requirements:</h3>
+        <div class="description">
 
-    <p>- PHP 5.3+</p>
-    <p>- CodeIgniter 2.0+</p>
+          <p>twig template engine implementation for PHP framework called <span>CodeIgniter</span></p>
 
-    <h3>Installation</h3>
+        </div>
 
-    <p>Installation is really simple. All you need to do is install <a href="http://getsparks.org/">sparks</a> for CodeIgniter and then folow <a href="http://getsparks.org/packages/Twiggy/versions/HEAD/show">the instructions</a>:</p>
+        <p class="wip">This is a work-in-progress, so hopefully the next time you visit this page you'll get to see more stuff.</p>
+
+      </div> <!-- #introduction END -->
+
+      <nav>
+
+        <h1>Navigation</h1>
+
+        <ul>
+
+          <li><a href="#overview">Overview</a></li>
+          <li><a href="#installation">Installation &amp; Requirements</a></li>
+          <li><a href="#usage">Basic Usage</a></li>
+          <li><a href="#examples">Examples</a></li>
+          <li><a href="#about">About</a></li>
+
+        </ul>
+
+      </nav>
+
+    </div> <!-- .container END -->
+
+  </header>
+
+  <section id="overview" class="container centered spaced">
+
+      <h1>Overview</h1>
+
+      <p>Twiggy is not just a simple implementation of Twig template engine for CodeIgniter. It supports themes, layouts, templates for regular apps and also for apps that use HMVC (module support). It is supposed to make life easier for developing and maitaining CodeIgniter applications where themes and nicely structured templates are necessary.</p>
+
+      <p>Twig by itself is a very powerful and flexible templating system but with CodeIgniter it is even cooler! With Twiggy you can separately set the theme, layout and template for each page. What is even more interesting, this does not replace CodeIgniter's default Views, so you can still load views as such: $this->load->view().</p>
+
+  </section>
+
+  <section id="installation" class="container centered spaced">
+
+    <h1>Installation &amp; Requirements</h1>
+
+    <p>To make sure Twiggy works correctly, you need to have:</p>
+
+    <ul>
+
+      <li>PHP 5.3+</li>
+      <li>CodeIgniter 2.x</li>
+
+    </ul>
+
+    <p>Note that you don’t need to install Twig yourself, it comes with Twiggy.</p>
+
+    <h2>How to install</h2>
+
+    <p>The installation is a piece of cake! All you need to do is to have sparks installed and run the following in the command line:</p>
 
     <pre>php tools\spark install -vx.x.x Twiggy</pre>
 
-    Here <b>x.x.x</b> replace with the current version of Twiggy.
+    <p>where x.x.x is the version of Twiggy you want to install.</p>
 
-    <h2>Usage</h2>
+  </section>
 
-    <p>Nothing here just yet.</p>
+  <section id="usage" class="container centered spaced">
 
-    <h2>Examples</h2>
+    <h1>Basic Usage</h1>
 
-    <p>Soon to come!</p>
+    <h2>1. Load it</h2>
 
-    <h2>Authors</h2>
-    <p>Edmundas Kondrašovas</p>
-  
+    <pre>$this->load->spark('twiggy/x.x.x');</pre>
 
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="https://github.com/edmundask/codeigniter-twiggy/zipball/master">zip</a> or
-      <a href="https://github.com/edmundask/codeigniter-twiggy/tarball/master">tar formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/edmundask/codeigniter-twiggy</pre>
-    </p>
+    <br>
 
-    <div class="footer">
-      get the source code on GitHub : <a href="https://github.com/edmundask/codeigniter-twiggy">edmundask/codeigniter-twiggy</a>
-    </div>
+    <h2>2. Set up dir structure</h2>
 
-  </div>
+    <ol>
+
+      <li>
+        <p>Create a directory structure:</p>
+
+        <pre>+-{APPPATH}/
+| +-themes/
+| | +-default/
+| | | +-_layouts/</pre>
+
+        <br>
+
+        <p>NOTE: <span class="tagged">{APPPATH}</span> is the folder where all your controllers, models and other neat stuff is placed. By default that folder is called application.</p>
+      
+      </li>
+
+      <li>
+
+        <p>Create a default layout <span class="tagged">index.html.twig</span> and place it in _layouts folder:</p>
+
+        <pre>&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+    &lt;head&gt;
+        &lt;meta charset="utf-8"&gt;
+        &lt;!--[if lt IE 9]&gt;
+        &lt;script src="http://html5shim.googlecode.com/svn/trunk/html5.js"&gt;&lt;/script&gt;
+        &lt;![endif]--&gt;
+        &lt;title&gt;Default layout&lt;/title&gt;
+    &lt;/head&gt;
+    &lt;body&gt;
+
+        {% block content %}
+
+        {% endblock %}
+
+    &lt;/body&gt;
+&lt;/html&gt;</pre>
+
+      </li>
+
+      <li>
+
+        <p>Create a default template file <span class="tagged">index.html.twig</span> at the root of default theme folder:</p>
+
+        <pre>{% extends _layout %}
+
+{% block content %}
+
+    Default template file.
+
+{% endblock %}</pre>
+
+      </li>
+
+      <li>
+
+        <p>You should end up with a structure like this:</p>
+
+        <pre>+-{APPPATH}/
+| +-themes/
+| | +-default/
+| | | +-_layouts/
+| | | | +-index.hml.twig
+| | | +-index.html.twig</pre>
+
+        <br>
+
+      </li>
+
+    </ol>
+
+    <h2>3. Display the template</h2>
+
+    <pre>$this->twiggy->display();</pre>
+
+    <br>
+
+    <h2>4. What's next?</h2>
+
+    <p>In the example above we only displayed the default template and layout. Obviously, you can create as many layouts and templates as you want. For example, create a new template file <span class="tagged">welcome.html.twig</span> and load it before sending the output to the browser.</p>
+
+    <pre>// Whoah, methoding chaining FTW!
+$this->twiggy->template('welcome')->display();</pre>
+
+    <br>
+
+    <p>Notice that you only need to specify the name of the template (without the extension <span class="tagged">*.html.twig</span>).</p>
+
+  </section>
+
+  <section id="examples" class="container centered spaced">
+
+    <h1>Examples</h1>
+
+    <p>Soon!</p>
+
+  </section>
+
+  <section id="about" class="container centered spaced">
+
+    <h1>About</h1>
+
+    <p>The author of Twiggy is <a href="http://edmundask.lt">Edmundas Kondrašovas</a>. However, he does not claim every piece of code as his own. Credit also goes to the authors of <a href="http://twig-project.org">Twig</a>.</p>
+
+    <h2>Donate</h2>
+
+    <!--<p>Twiggy is absolutely free of use and does not cost anything. But if you want, you can support the author by making a donation. See the details below.</p>-->
+
+  </section>
 
 </body>
 </html>
