Add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <img style="position: fixed; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" />
   </a>
 
+  <a href="#top" id="to-top">To Top</a>
+
   <header>
 
     <div class="container centered">
@@ -215,5 +217,8 @@ $this->twiggy->template('welcome')->display();</pre>
 
   </section>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script src="./assets/javascripts/jquery.easing.1.3.js"></script>
+  <script src="./assets/javascripts/application.js"></script>
 </body>
 </html>
