--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ $this->twiggy->title('Control Panel', 'Login');</pre>
 
     <pre>Control Panel | Login</pre>
 
-    <p>The code above is equivelent to this:</p>
+    <p>The code above is equivalent to this:</p>
 
     <pre>$this->twiggy->title('Control Panel')->append('Login');</pre>
 
